# esp-idf-as-lib-example

./: .gitignore  CMakeLists.txt  README.md  build.sh  just.sh  justfile  main.c  run.sh  sdkconfig.defaults
.github/workflows/: build.yml
